@@ -1,8 +1,8 @@
 package org.crue.hercules.sgi.csp.repository.custom;
 
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
@@ -10,16 +10,20 @@ import javax.persistence.Tuple;
 import javax.persistence.TypedQuery;
 import javax.persistence.criteria.CriteriaBuilder;
 import javax.persistence.criteria.CriteriaQuery;
+import javax.persistence.criteria.Expression;
 import javax.persistence.criteria.Join;
-import javax.persistence.criteria.JoinType;
 import javax.persistence.criteria.Predicate;
 import javax.persistence.criteria.Root;
+import javax.persistence.criteria.Subquery;
 
 import org.crue.hercules.sgi.csp.model.EstadoSolicitud;
 import org.crue.hercules.sgi.csp.model.EstadoSolicitud_;
 import org.crue.hercules.sgi.csp.model.Solicitud;
+import org.crue.hercules.sgi.csp.model.SolicitudTitulo;
+import org.crue.hercules.sgi.csp.model.SolicitudTitulo_;
 import org.crue.hercules.sgi.csp.model.Solicitud_;
 import org.crue.hercules.sgi.csp.util.CriteriaQueryUtils;
+import org.crue.hercules.sgi.framework.spring.context.i18n.SgiLocaleContextHolder;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
@@ -40,6 +44,8 @@ public class CustomSolicitudRepositoryImpl implements CustomSolicitudRepository 
       + EstadoSolicitud_.ESTADO;
   private static final String SELECTION_NAME_ESTADO_FECHAESTADO = Solicitud_.ESTADO + SELECTION_NAME_SEPARATOR
       + EstadoSolicitud_.FECHA_ESTADO;
+  private static final String SELECTION_NAME_TITULO = Solicitud_.TITULO + SELECTION_NAME_SEPARATOR
+      + SolicitudTitulo_.VALUE;
 
   /**
    * The entity manager.
@@ -71,7 +77,7 @@ public class CustomSolicitudRepositoryImpl implements CustomSolicitudRepository 
 
   /**
    * Devuelve una lista paginada y filtrada {@link Solicitud} sin duplicados y
-   * ordenable por el estaod y la fecha del estado.
+   * ordenable por el titulo, el estado y la fecha del estado.
    * 
    * @param specs    condiciones que deben cumplir.
    * @param pageable la información de la paginación.
@@ -87,7 +93,43 @@ public class CustomSolicitudRepositoryImpl implements CustomSolicitudRepository 
 
     // Define FROM clause
     Root<Solicitud> root = cq.from(Solicitud.class);
-    Join<Solicitud, EstadoSolicitud> join = root.join(Solicitud_.estado, JoinType.INNER);
+
+    // Si se ordena por el titulo de la solicitud se hace un subquery para obtener
+    // el titulo en el idioma actual para poder hacer la ordenacion, si no se ordena
+    // por el titulo no es necesaria la subquery
+    boolean sortingByTituloSolicitud = pageable.getSort().get()
+        .anyMatch(sort -> sort.getProperty().equals(SELECTION_NAME_TITULO));
+
+    Expression<String> solicitudTituloExpression;
+    if (sortingByTituloSolicitud) {
+      Subquery<String> subqueryTitulo = cq.subquery(String.class);
+      Root<Solicitud> subRoot = subqueryTitulo.correlate(root);
+      Join<Solicitud, SolicitudTitulo> joinSolicitudTitulo = subRoot.join(Solicitud_.titulo);
+
+      subqueryTitulo.select(joinSolicitudTitulo.get(SolicitudTitulo_.value))
+          .where(cb.equal(joinSolicitudTitulo.get(SolicitudTitulo_.lang), SgiLocaleContextHolder.getLanguage()));
+
+      solicitudTituloExpression = subqueryTitulo;
+    } else {
+      solicitudTituloExpression = cb.literal("");
+    }
+
+    // Si se ordena por el nombre o la fecha del estado se hace el join para poder
+    // hacer la ordenacion, si no no es necesario
+    boolean sortingByEstadoOrFechaEstado = pageable.getSort().get()
+        .anyMatch(sort -> sort.getProperty().equals(SELECTION_NAME_ESTADO_ESTADO)
+            || sort.getProperty().equals(SELECTION_NAME_ESTADO_FECHAESTADO));
+
+    Expression<String> nombreEstadoExpression;
+    Expression<Instant> fechaEstadoExpression;
+    if (sortingByEstadoOrFechaEstado) {
+      Join<Solicitud, EstadoSolicitud> joinEstado = root.join(Solicitud_.estado);
+      nombreEstadoExpression = joinEstado.get(EstadoSolicitud_.estado).as(String.class);
+      fechaEstadoExpression = joinEstado.get(EstadoSolicitud_.fechaEstado).as(Instant.class);
+    } else {
+      nombreEstadoExpression = cb.literal("");
+      fechaEstadoExpression = cb.nullLiteral(Instant.class);
+    }
 
     // Count query
     CriteriaQuery<Long> countQuery = cb.createQuery(Long.class);
@@ -105,15 +147,16 @@ public class CustomSolicitudRepositoryImpl implements CustomSolicitudRepository 
 
     cq.where(listPredicates.toArray(new Predicate[] {}));
 
-    // Execute query
     cq.distinct(true).multiselect(
         root,
-        join.get(EstadoSolicitud_.estado).alias(SELECTION_NAME_ESTADO_ESTADO),
-        join.get(EstadoSolicitud_.fechaEstado).alias(SELECTION_NAME_ESTADO_FECHAESTADO));
+        nombreEstadoExpression.alias(SELECTION_NAME_ESTADO_ESTADO),
+        fechaEstadoExpression.alias(SELECTION_NAME_ESTADO_FECHAESTADO),
+        solicitudTituloExpression.alias(SELECTION_NAME_TITULO));
 
     String[] selectionNames = new String[] {
         SELECTION_NAME_ESTADO_ESTADO,
-        SELECTION_NAME_ESTADO_FECHAESTADO
+        SELECTION_NAME_ESTADO_FECHAESTADO,
+        SELECTION_NAME_TITULO
     };
 
     cq.orderBy(CriteriaQueryUtils.toOrders(pageable.getSort(), root, cb, cq, selectionNames));
@@ -128,8 +171,7 @@ public class CustomSolicitudRepositoryImpl implements CustomSolicitudRepository 
       typedQuery.setMaxResults(pageable.getPageSize());
     }
 
-    List<Solicitud> result = typedQuery.getResultList().stream().map(a -> (Solicitud) a.get(0))
-        .collect(Collectors.toList());
+    List<Solicitud> result = typedQuery.getResultList().stream().map(a -> (Solicitud) a.get(0)).toList();
     Page<Solicitud> returnValue = new PageImpl<>(result, pageable, count);
 
     log.debug("findAllDistinct(String query, Pageable pageable) - end");
