@@ -3,15 +3,21 @@ package org.crue.hercules.sgi.csp.controller;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import org.assertj.core.api.Assertions;
 import org.crue.hercules.sgi.csp.converter.GastoRequerimientoJustificacionConverter;
 import org.crue.hercules.sgi.csp.dto.GastoRequerimientoJustificacionInput;
 import org.crue.hercules.sgi.csp.dto.GastoRequerimientoJustificacionOutput;
 import org.crue.hercules.sgi.csp.model.GastoRequerimientoJustificacion;
+import org.crue.hercules.sgi.csp.model.GastoRequerimientoJustificacionAlegacion;
+import org.crue.hercules.sgi.csp.model.GastoRequerimientoJustificacionIncidencia;
 import org.crue.hercules.sgi.csp.service.GastoRequerimientoJustificacionService;
+import org.crue.hercules.sgi.framework.i18n.I18nFieldValueDto;
+import org.crue.hercules.sgi.framework.i18n.I18nHelper;
+import org.crue.hercules.sgi.framework.i18n.Language;
 import org.crue.hercules.sgi.framework.test.web.servlet.result.SgiMockMvcResultHandlers;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
@@ -37,7 +43,7 @@ import com.fasterxml.jackson.core.type.TypeReference;
  * GastoRequerimientoJustificacionControllerTest
  */
 @WebMvcTest(GastoRequerimientoJustificacionController.class)
-public class GastoRequerimientoJustificacionControllerTest extends BaseControllerTest {
+class GastoRequerimientoJustificacionControllerTest extends BaseControllerTest {
 
   @MockBean
   private GastoRequerimientoJustificacionService service;
@@ -90,7 +96,7 @@ public class GastoRequerimientoJustificacionControllerTest extends BaseControlle
         // and the created GastoRequerimientoJustificacionInput is resturned as JSON
         // object
         .andExpect(MockMvcResultMatchers.status().isCreated())
-        .andExpect(MockMvcResultMatchers.jsonPath("alegacion").value(alegacion));
+        .andExpect(MockMvcResultMatchers.jsonPath("alegacion[0].value").value(alegacion));
   }
 
   @Test
@@ -117,10 +123,7 @@ public class GastoRequerimientoJustificacionControllerTest extends BaseControlle
           }
         });
     BDDMockito.given(service.update(ArgumentMatchers.<GastoRequerimientoJustificacion>any()))
-        .willAnswer((InvocationOnMock invocation) -> {
-          GastoRequerimientoJustificacion gastoRequerimientoJustificacion = invocation.getArgument(0);
-          return gastoRequerimientoJustificacion;
-        });
+        .willAnswer((InvocationOnMock invocation) -> invocation.getArgument(0));
     BDDMockito.given(converter.convert(ArgumentMatchers.<GastoRequerimientoJustificacion>any()))
         .willAnswer(new Answer<GastoRequerimientoJustificacionOutput>() {
           @Override
@@ -143,7 +146,7 @@ public class GastoRequerimientoJustificacionControllerTest extends BaseControlle
         .andExpect(MockMvcResultMatchers.status().isOk())
         .andExpect(MockMvcResultMatchers.jsonPath("id").value(
             gastoRequerimientoJustificacionId))
-        .andExpect(MockMvcResultMatchers.jsonPath("alegacion").value(alegacion));
+        .andExpect(MockMvcResultMatchers.jsonPath("alegacion[0].value").value(alegacion));
   }
 
   @Test
@@ -188,8 +191,7 @@ public class GastoRequerimientoJustificacionControllerTest extends BaseControlle
             int toIndex = fromIndex + size;
             toIndex = toIndex > gastos.size() ? gastos.size() : toIndex;
             List<GastoRequerimientoJustificacion> content = gastos.subList(fromIndex, toIndex);
-            Page<GastoRequerimientoJustificacion> page = new PageImpl<>(content, pageable, gastos.size());
-            return page;
+            return new PageImpl<>(content, pageable, gastos.size());
           }
         });
     BDDMockito
@@ -198,13 +200,9 @@ public class GastoRequerimientoJustificacionControllerTest extends BaseControlle
           @Override
           public Page<GastoRequerimientoJustificacionOutput> answer(InvocationOnMock invocation) throws Throwable {
             Page<GastoRequerimientoJustificacion> pageInput = invocation.getArgument(0);
-            List<GastoRequerimientoJustificacionOutput> content = pageInput.getContent().stream().map(input -> {
-              return generarMockGastoRequerimientoJustificacionOutput(input);
-            }).collect(Collectors.toList());
-            Page<GastoRequerimientoJustificacionOutput> pageOutput = new PageImpl<>(content,
-                pageInput.getPageable(),
-                pageInput.getTotalElements());
-            return pageOutput;
+            List<GastoRequerimientoJustificacionOutput> content = pageInput.getContent().stream()
+                .map(input -> generarMockGastoRequerimientoJustificacionOutput(input)).toList();
+            return new PageImpl<>(content, pageInput.getPageable(), pageInput.getTotalElements());
           }
         });
 
@@ -233,7 +231,7 @@ public class GastoRequerimientoJustificacionControllerTest extends BaseControlle
     for (int i = 31; i <= 37; i++) {
       GastoRequerimientoJustificacionOutput gasto = gastoResponse
           .get(i - (page * pageSize) - 1);
-      Assertions.assertThat(gasto.getAlegacion())
+      Assertions.assertThat(I18nHelper.getValueForLanguage(gasto.getAlegacion(), Language.ES))
           .isEqualTo("Alegacion-" + String.format("%03d", i));
     }
   }
@@ -253,8 +251,7 @@ public class GastoRequerimientoJustificacionControllerTest extends BaseControlle
           @Override
           public Page<GastoRequerimientoJustificacion> answer(InvocationOnMock invocation) throws Throwable {
             Pageable pageable = invocation.getArgument(1, Pageable.class);
-            Page<GastoRequerimientoJustificacion> page = new PageImpl<>(gastos, pageable, 0);
-            return page;
+            return new PageImpl<>(gastos, pageable, 0);
           }
         });
     BDDMockito
@@ -263,8 +260,7 @@ public class GastoRequerimientoJustificacionControllerTest extends BaseControlle
         .willAnswer(new Answer<Page<GastoRequerimientoJustificacionOutput>>() {
           @Override
           public Page<GastoRequerimientoJustificacionOutput> answer(InvocationOnMock invocation) throws Throwable {
-            Page<GastoRequerimientoJustificacionOutput> page = new PageImpl<>(Collections.emptyList());
-            return page;
+            return new PageImpl<>(Collections.emptyList());
           }
         });
 
@@ -290,80 +286,94 @@ public class GastoRequerimientoJustificacionControllerTest extends BaseControlle
 
   private GastoRequerimientoJustificacion generarMockGastoRequerimientoJustificacion(
       GastoRequerimientoJustificacionInput input) {
-    return generarMockGastoRequerimientoJustificacion(null, input.getRequerimientoJustificacionId(),
-        input.getAlegacion());
+    return generarMockGastoRequerimientoJustificacion(input.getRequerimientoJustificacionId(), null);
   }
 
   private GastoRequerimientoJustificacion generarMockGastoRequerimientoJustificacion(
       GastoRequerimientoJustificacionInput input, Long id) {
-    return generarMockGastoRequerimientoJustificacion(id, input.getRequerimientoJustificacionId(),
-        input.getAlegacion());
-  }
-
-  private GastoRequerimientoJustificacion generarMockGastoRequerimientoJustificacion(Long id,
-      Long requerimientoJustificacionId, String alegacion) {
-    return generarMockGastoRequerimientoJustificacion(id, Boolean.TRUE, alegacion,
-        null, "11/1111",
-        null, null, null,
-        null, requerimientoJustificacionId);
+    return generarMockGastoRequerimientoJustificacion(
+        id,
+        Boolean.TRUE,
+        I18nHelper.getValueForLanguage(input.getAlegacion(), Language.ES),
+        null,
+        "11/1111",
+        null,
+        null,
+        null,
+        null,
+        input.getRequerimientoJustificacionId());
   }
 
   private GastoRequerimientoJustificacion generarMockGastoRequerimientoJustificacion(Long id, Boolean aceptado,
       String alegacion, String gastoRef, String identificadorJustificacion, BigDecimal importeAceptado,
       BigDecimal importeAlegado, BigDecimal importeRechazado,
       String incidencia, Long requerimientoJustificacionId) {
+
+    Set<GastoRequerimientoJustificacionIncidencia> incidenciaGastoRequerimientoJustificacion = new HashSet<>();
+    incidenciaGastoRequerimientoJustificacion
+        .add(new GastoRequerimientoJustificacionIncidencia(Language.ES, incidencia));
+
+    Set<GastoRequerimientoJustificacionAlegacion> alegacionGastoRequerimientoJustificacion = new HashSet<>();
+    alegacionGastoRequerimientoJustificacion.add(new GastoRequerimientoJustificacionAlegacion(Language.ES, alegacion));
+
     return GastoRequerimientoJustificacion.builder()
         .id(id)
         .aceptado(aceptado)
-        .alegacion(alegacion)
+        .alegacion(alegacionGastoRequerimientoJustificacion)
         .gastoRef(gastoRef)
         .identificadorJustificacion(identificadorJustificacion)
         .importeAceptado(importeAceptado)
         .importeAlegado(importeAlegado)
         .importeRechazado(importeRechazado)
-        .incidencia(incidencia)
+        .incidencia(incidenciaGastoRequerimientoJustificacion)
         .requerimientoJustificacionId(requerimientoJustificacionId)
         .build();
   }
 
   private GastoRequerimientoJustificacionInput generarMockGastoRequerimientoJustificacionInput(
       Long requerimientoJustificacionId, String alegacion) {
-    return generarMockGastoRequerimientoJustificacionInput(Boolean.TRUE, alegacion,
-        null, "11/1111",
-        null, null, null,
-        null, requerimientoJustificacionId);
+    return generarMockGastoRequerimientoJustificacionInput(
+        Boolean.TRUE,
+        alegacion,
+        null,
+        "11/1111",
+        null,
+        null,
+        null,
+        null,
+        requerimientoJustificacionId);
   }
 
   private GastoRequerimientoJustificacionInput generarMockGastoRequerimientoJustificacionInput(Boolean aceptado,
       String alegacion, String gastoRef, String identificadorJustificacion, BigDecimal importeAceptado,
       BigDecimal importeAlegado, BigDecimal importeRechazado,
       String incidencia, Long requerimientoJustificacionId) {
+    List<I18nFieldValueDto> incidenciaGastoRequerimiento = new ArrayList<>();
+    incidenciaGastoRequerimiento.add(new I18nFieldValueDto(Language.ES, incidencia));
+
+    List<I18nFieldValueDto> alegacionGastoRequerimiento = new ArrayList<>();
+    alegacionGastoRequerimiento.add(new I18nFieldValueDto(Language.ES, alegacion));
+
     return GastoRequerimientoJustificacionInput.builder()
         .aceptado(aceptado)
-        .alegacion(alegacion)
+        .alegacion(alegacionGastoRequerimiento)
         .gastoRef(gastoRef)
         .identificadorJustificacion(identificadorJustificacion)
         .importeAceptado(importeAceptado)
         .importeAlegado(importeAlegado)
         .importeRechazado(importeRechazado)
-        .incidencia(incidencia)
+        .incidencia(
+            incidenciaGastoRequerimiento)
         .requerimientoJustificacionId(requerimientoJustificacionId)
         .build();
   }
 
   private GastoRequerimientoJustificacionOutput generarMockGastoRequerimientoJustificacionOutput(
       GastoRequerimientoJustificacion gastoRequerimientoJustificacion) {
-    return generarMockGastoRequerimientoJustificacionOutput(gastoRequerimientoJustificacion.getId(),
-        gastoRequerimientoJustificacion.getRequerimientoJustificacionId(),
-        gastoRequerimientoJustificacion.getAlegacion());
-  }
-
-  private GastoRequerimientoJustificacionOutput generarMockGastoRequerimientoJustificacionOutput(Long id,
-      Long requerimientoJustificacionId, String alegacion) {
     return GastoRequerimientoJustificacionOutput.builder()
-        .id(id)
-        .alegacion(alegacion)
-        .requerimientoJustificacionId(requerimientoJustificacionId)
+        .id(gastoRequerimientoJustificacion.getId())
+        .alegacion(gastoRequerimientoJustificacion.getAlegacion())
+        .requerimientoJustificacionId(gastoRequerimientoJustificacion.getRequerimientoJustificacionId())
         .build();
   }
 }
