@@ -3,10 +3,11 @@ package org.crue.hercules.sgi.csp.service;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import org.assertj.core.api.Assertions;
 import org.crue.hercules.sgi.csp.config.SgiConfigProperties;
@@ -14,13 +15,18 @@ import org.crue.hercules.sgi.csp.exceptions.ProyectoEquipoNotFoundException;
 import org.crue.hercules.sgi.csp.exceptions.ProyectoNotFoundException;
 import org.crue.hercules.sgi.csp.model.Proyecto;
 import org.crue.hercules.sgi.csp.model.ProyectoEquipo;
+import org.crue.hercules.sgi.csp.model.ProyectoTitulo;
 import org.crue.hercules.sgi.csp.model.RolProyecto;
+import org.crue.hercules.sgi.csp.model.RolProyectoAbreviatura;
+import org.crue.hercules.sgi.csp.model.RolProyectoDescripcion;
+import org.crue.hercules.sgi.csp.model.RolProyectoNombre;
 import org.crue.hercules.sgi.csp.repository.ProyectoEquipoRepository;
 import org.crue.hercules.sgi.csp.repository.ProyectoRepository;
 import org.crue.hercules.sgi.csp.repository.ProyectoResponsableEconomicoRepository;
 import org.crue.hercules.sgi.csp.repository.SolicitudRepository;
 import org.crue.hercules.sgi.csp.service.impl.ProyectoEquipoServiceImpl;
 import org.crue.hercules.sgi.csp.util.ProyectoHelper;
+import org.crue.hercules.sgi.framework.i18n.Language;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentMatchers;
@@ -54,7 +60,7 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
   private ProyectoEquipoService service;
 
   @BeforeEach
-  void setUp() throws Exception {
+  void setUp() {
     service = new ProyectoEquipoServiceImpl(repository, proyectoRepository, solicitudRepository,
         proyectoHelper, sgiConfigProperties);
   }
@@ -98,7 +104,7 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
             }
             proyectoEquipo.setProyectoId(proyectoId);
             return proyectoEquipo;
-          }).collect(Collectors.toList());
+          }).toList();
         });
 
     // when: updateProyectoEquipos
@@ -141,12 +147,12 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
     Long proyectoId = 1L;
     ProyectoEquipo proyectoEquipo = generarMockProyectoEquipo(3L, Instant.parse("2020-02-15T00:00:00Z"),
         Instant.parse("2020-05-15T23:59:59Z"), proyectoId);
+    List<ProyectoEquipo> proyectoEquipoList = Arrays.asList(proyectoEquipo);
 
     BDDMockito.given(proyectoRepository.findById(ArgumentMatchers.anyLong())).willReturn(Optional.empty());
-
     Assertions.assertThatThrownBy(
         // when: update ProyectoEquipo
-        () -> service.update(proyectoId, Arrays.asList(proyectoEquipo)))
+        () -> service.update(proyectoId, proyectoEquipoList))
         // then: throw exception as Proyecto is not found
         .isInstanceOf(ProyectoNotFoundException.class);
   }
@@ -159,6 +165,7 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
     Proyecto proyecto = generarMockProyecto(proyectoId);
     ProyectoEquipo proyectoEquipo = generarMockProyectoEquipo(3L, Instant.parse("2020-02-15T00:00:00Z"),
         Instant.parse("2020-05-15T23:59:59Z"), proyectoId);
+    List<ProyectoEquipo> proyectoEquipoList = Arrays.asList(proyectoEquipo);
 
     BDDMockito.given(proyectoRepository.findById(ArgumentMatchers.anyLong())).willReturn(Optional.of(proyecto));
 
@@ -167,7 +174,7 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
     // when:updateProyectoEquiposConvocatoria
     // then: Lanza una excepcion porque el ProyectoEquipo
     // no existe
-    Assertions.assertThatThrownBy(() -> service.update(proyectoId, Arrays.asList(proyectoEquipo)))
+    Assertions.assertThatThrownBy(() -> service.update(proyectoId, proyectoEquipoList))
         .isInstanceOf(ProyectoEquipoNotFoundException.class);
   }
 
@@ -178,15 +185,16 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
     Proyecto proyecto = generarMockProyecto(proyectoId);
     ProyectoEquipo proyectoEquipo = generarMockProyectoEquipo(3L, Instant.parse("2020-05-15T00:00:00Z"),
         Instant.parse("2020-03-15T23:59:59Z"), proyectoId);
+    List<ProyectoEquipo> proyectoEquipoList = Arrays.asList(proyectoEquipo);
 
     BDDMockito.given(proyectoRepository.findById(ArgumentMatchers.anyLong())).willReturn(Optional.of(proyecto));
 
     BDDMockito.given(repository.findAllByProyectoId(ArgumentMatchers.anyLong()))
-        .willReturn(Arrays.asList(proyectoEquipo));
+        .willReturn(proyectoEquipoList);
 
     Assertions.assertThatThrownBy(
         // when: updateProyectoEquipos
-        () -> service.update(proyectoId, Arrays.asList(proyectoEquipo)))
+        () -> service.update(proyectoId, proyectoEquipoList))
         // then: throw exception
         .isInstanceOf(IllegalArgumentException.class)
         .hasMessage(
@@ -201,6 +209,7 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
     Proyecto proyecto = generarMockProyecto(proyectoId);
     ProyectoEquipo proyectoEquipo = generarMockProyectoEquipo(3L, Instant.parse("2020-05-15T00:00:00Z"),
         Instant.parse("2022-03-15T00:00:00Z"), proyectoId);
+    List<ProyectoEquipo> proyectoEquipoList = Arrays.asList(proyectoEquipo);
 
     BDDMockito.given(proyectoRepository.findById(ArgumentMatchers.anyLong())).willReturn(Optional.of(proyecto));
 
@@ -209,7 +218,7 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
 
     Assertions.assertThatThrownBy(
         // when: updateProyectoEquipos
-        () -> service.update(proyectoId, Arrays.asList(proyectoEquipo)))
+        () -> service.update(proyectoId, proyectoEquipoList))
         // then: throw exception
         .isInstanceOf(IllegalArgumentException.class)
         .hasMessage("Las fechas de proyecto equipo deben de estar dentro de la duración del proyecto");
@@ -224,6 +233,7 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
         Instant.parse("2021-03-15T23:59:59Z"), proyectoId);
     ProyectoEquipo proyectoEquipo2 = generarMockProyectoEquipo(null, Instant.parse("2020-05-15T00:00:00Z"),
         Instant.parse("2021-03-15T23:59:59Z"), proyectoId);
+    List<ProyectoEquipo> proyectoEquipoList = Arrays.asList(proyectoEquipo, proyectoEquipo2);
 
     BDDMockito.given(proyectoRepository.findById(ArgumentMatchers.anyLong())).willReturn(Optional.of(proyecto));
 
@@ -231,13 +241,13 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
 
     Assertions.assertThatThrownBy(
         // when: updateProyectoEquiposConvocatoria
-        () -> service.update(proyectoId, Arrays.asList(proyectoEquipo, proyectoEquipo2)))
+        () -> service.update(proyectoId, proyectoEquipoList))
         // then: throw exception
         .isInstanceOf(IllegalArgumentException.class).hasMessage("El proyecto equipo se solapa con otro existente");
   }
 
   @Test
-  void findById_WithExistingId_ReturnsProyectoEquipo() throws Exception {
+  void findById_WithExistingId_ReturnsProyectoEquipo() {
     // given: existing ProyectoEquipo
     ProyectoEquipo proyectoEquipo = generarMockProyectoEquipo(1L, Instant.parse("2020-05-15T00:00:00Z"),
         Instant.parse("2021-03-15T23:59:59Z"), 1L);
@@ -260,7 +270,7 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
   }
 
   @Test
-  void findById_WithNoExistingId_ThrowsNotFoundException() throws Exception {
+  void findById_WithNoExistingId_ThrowsNotFoundException() {
     // given: no existing id
     BDDMockito.given(repository.findById(ArgumentMatchers.anyLong())).willReturn(Optional.empty());
 
@@ -294,8 +304,7 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
             int fromIndex = size * index;
             int toIndex = fromIndex + size;
             List<ProyectoEquipo> content = listaProyectoEquipo.subList(fromIndex, toIndex);
-            Page<ProyectoEquipo> page = new PageImpl<>(content, pageable, listaProyectoEquipo.size());
-            return page;
+            return new PageImpl<>(content, pageable, listaProyectoEquipo.size());
           }
         });
 
@@ -318,18 +327,18 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
   }
 
   private Proyecto generarMockProyecto(Long proyectoId) {
-    // @formatter:off
-    Proyecto proyecto = Proyecto.builder()
-      .id(proyectoId)
-      .titulo("proyecto 2")
-      .acronimo("PR2")
-      .fechaInicio(Instant.parse("2020-01-20T00:00:00Z"))
-      .fechaFin(Instant.parse("2021-11-20T23:59:59Z"))
-      .unidadGestionRef("2")
-      .activo(Boolean.TRUE)
-      .build();
-    // @formatter:on
-    return proyecto;
+    Set<ProyectoTitulo> tituloProyecto = new HashSet<>();
+    tituloProyecto.add(new ProyectoTitulo(Language.ES, "proyecto 2"));
+
+    return Proyecto.builder()
+        .id(proyectoId)
+        .titulo(tituloProyecto)
+        .acronimo("PR2")
+        .fechaInicio(Instant.parse("2020-01-20T00:00:00Z"))
+        .fechaFin(Instant.parse("2021-11-20T23:59:59Z"))
+        .unidadGestionRef("2")
+        .activo(Boolean.TRUE)
+        .build();
   }
 
   /**
@@ -342,21 +351,29 @@ class ProyectoEquipoServiceTest extends BaseServiceTest {
    * @return el objeto ProyectoEquipo
    */
   private ProyectoEquipo generarMockProyectoEquipo(Long id, Instant fechaInicio, Instant fechaFin, Long proyectoId) {
+    Set<RolProyectoNombre> nombre = new HashSet<>();
+    nombre.add(new RolProyectoNombre(Language.ES, "nombre-001"));
+    Set<RolProyectoDescripcion> descripcion = new HashSet<>();
+    descripcion.add(new RolProyectoDescripcion(Language.ES, "descripcion-001"));
+    Set<RolProyectoAbreviatura> abreviatura = new HashSet<>();
+    abreviatura.add(new RolProyectoAbreviatura(Language.ES, "001"));
 
-    // @formatter:off
     RolProyecto rolProyecto = RolProyecto.builder().id(id)
-        .abreviatura("001")
-        .nombre("nombre-001")
-        .descripcion("descripcion-001")
+        .abreviatura(abreviatura)
+        .nombre(nombre)
+        .descripcion(descripcion)
         .rolPrincipal(Boolean.FALSE)
         .equipo(RolProyecto.Equipo.INVESTIGACION).activo(Boolean.TRUE)
         .build();
-    // @formatter:on
 
-    ProyectoEquipo proyectoEquipo = ProyectoEquipo.builder().id(id).proyectoId(proyectoId).rolProyecto(rolProyecto)
-        .fechaInicio(fechaInicio).fechaFin(fechaFin).personaRef("001").build();
-
-    return proyectoEquipo;
+    return ProyectoEquipo.builder()
+        .id(id)
+        .proyectoId(proyectoId)
+        .rolProyecto(rolProyecto)
+        .fechaInicio(fechaInicio)
+        .fechaFin(fechaFin)
+        .personaRef("001")
+        .build();
   }
 
 }
