@@ -4,10 +4,7 @@ import java.time.Instant;
 import java.time.LocalTime;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-
-import com.fasterxml.jackson.core.JsonProcessingException;
 
 import org.crue.hercules.sgi.pii.config.SgiConfigProperties;
 import org.crue.hercules.sgi.pii.dto.com.EmailOutput;
@@ -18,6 +15,8 @@ import org.crue.hercules.sgi.pii.repository.SolicitudProteccionRepository;
 import org.crue.hercules.sgi.pii.service.sgi.SgiApiCnfService;
 import org.crue.hercules.sgi.pii.service.sgi.SgiApiComService;
 import org.springframework.stereotype.Service;
+
+import com.fasterxml.jackson.core.JsonProcessingException;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -128,8 +127,7 @@ public class SolicitudProteccionComService {
     }
 
     return destinatarios.stream()
-        .map(destinatario -> Recipient.builder().name(destinatario).address(destinatario).build())
-        .collect(Collectors.toList());
+        .map(destinatario -> Recipient.builder().name(destinatario).address(destinatario).build()).toList();
   }
 
 }
